force-app/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <description>Log detalhado de todas as chamadas para APIs externas (SendGrid, Slack, OpenAI, ERP, ViaCEP). Armazena request, response e status para auditoria e debugging.</description>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>LOG-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>