force-app/main/default/objects/Integration_Log__c/fields/Duration_Ms__c.field-meta.xml
<CustomField>
    <fullName>Duration_Ms__c</fullName>
    <label>Duration (ms)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>