force-app/main/default/objects/Integration_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>